# ConnectaAPP-Backend

./: README.md  database.py  main.py  models.py  pyproject.toml  scheema.py  security.py  teste.py
docs/: auth_docs.py  info_docs.py
routes/: auth.py  funcs.py  infos.py
routes/sys_tickets/: db.py
