[project]
name = "conb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "fastapi-limiter>=0.1.6",
    "pydantic[email]>=2.11.4",
    "python-jose>=3.4.0",
    "redis>=6.0.0",
    "uvicorn>=0.34.2",
    "validate-docbr>=1.10.0",
]
