[project]
name = "conb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi>=0.115.12",
    "fastapi-limiter>=0.1.6",
    "motor>=3.7.0",
    "passlib[argon2]>=1.7.4",
    "pydantic[email]>=2.11.4",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "redis>=6.0.0",
    "uvicorn>=0.34.2",
    "validate-docbr>=1.10.0",
]
